# ohla

./: .gitignore  PROJECT_TRACKER.md  README.md  package-lock.json  package.json
backend/: API.md  Cargo.toml  README.md  REPOSITORY_PATTERN.md
backend/.cargo/: config.toml
backend/src/: app.rs  main.rs
backend/src/config/: bitcoin.rs  constants.rs  env.rs  mod.rs
backend/src/db/: mod.rs  node_repository.rs  traits.rs
backend/src/db/sqlite/: mod.rs  node_config.rs
backend/src/domain/: node.rs
backend/src/errors/: mod.rs
backend/src/responses/: mod.rs
backend/src/routes/: config.rs  health.rs  mod.rs  node.rs
backend/src/services/: bitcoin_rpc.rs
backend/src/state/: app_state.rs
frontend/: package-lock.json
frontend/src/app/: page.tsx
