[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
cargo-watch = "8.5"
